Server and iOS refactoring
