# backend_store/main_proto/server_proto.py
@@ -23,13 +23,10 @@ class CreateUserResponse(messages.Message):
 # class DeleteUserResponse(messages.Message):
 #     status = messages.MessageField(Status, 1, required=False)
 
-'''
-    Only need to provide a username for the user and the text and location
-    where the post was made. The location can simply be the current location
-    of the user.
-'''
 class InsertPostRequest(messages.Message):
-    post = messages.MessageField(entity_proto.Post, 2, required=False)
+    username = messages.StringField(1, required=False)
+    post_text = messages.StringField(2, required=False)
+    location = messages.MessageField(entity_proto.Location, 3, required=False)
 
 class InsertPostResponse(messages.Message):
     status = messages.MessageField(Status, 1, required=False)
@@ -42,38 +39,25 @@ class InsertPostResponse(messages.Message):
 # class DeletePostResponse(messages.Message):
 #     status = messages.MessageField(Status, 1, required=False)
 
-'''Only need post id'''
 class UpdatePostRequest(messages.Message):
-    post = messages.MessageField(entity_proto.Post, 1, required=False)
+    post_id = messages.MessageField(entity_proto.Post, 1, required=False)
     action_type = messages.EnumField(entity_proto.ActionType, 2, required=False)
     user = messages.MessageField(entity_proto.User, 3, required=False)
 
 class UpdatePostResponse(messages.Message):
     status = messages.MessageField(Status, 1, required=False)
 
-'''Need username, post_id and comment_text'''
 class InsertCommentRequest(messages.Message):
-    comment = messages.MessageField(entity_proto.Comment, 1, required=False)
+    username = messages.StringField(1, required=False)
+    post_id = messages.StringField(2, required=False)
+    comment_text = messages.StringField(3, required=False)
 
 class InsertCommentResponse(messages.Message):
     status = messages.MessageField(Status, 1, required=False)
     comments = messages.MessageField(entity_proto.Comment, 2, repeated=True)
 
-'''Only need username'''
-class GetAllPostsAroundUserRequest(messages.Message):
-    user = messages.MessageField(entity_proto.User, 1, required=False)
-    query_params = messages.MessageField(
-        entity_proto.QueryParams, 2, required=False)
-
-class GetAllPostsAroundUserResponse(messages.Message):
-    posts = messages.MessageField(entity_proto.Post, 1, repeated=True)
-    query_metadata = messages.MessageField(
-        entity_proto.QueryMetadata, 2, required=False)
-    status = messages.MessageField(Status, 3, required=False)
-
-'''Only need username'''
 class GetAllPostsByUserRequest(messages.Message):
-    user = messages.MessageField(entity_proto.User, 1, required=False)
+    username = messages.StringField(1, required=False)
     query_params = messages.MessageField(
         entity_proto.QueryParams, 2, required=False)
 
@@ -83,9 +67,8 @@ class GetAllPostsByUserResponse(messages.Message):
     query_metadata = messages.MessageField(
         entity_proto.QueryMetadata, 3, required=False)
 
-'''Only need username'''
 class GetAllPostsCommentedOnByUserRequest(messages.Message):
-    user = messages.MessageField(entity_proto.User, 1, required=False)
+    username = messages.StringField(1, required=False)
     query_params = messages.MessageField(
         entity_proto.QueryParams, 2, required=False)
 
@@ -102,9 +85,8 @@ class GetAllPostsCommentedOnByUserResponse(messages.Message):
 # class GetPostResponse(messages.Message):
 #     post = messages.MessageField(entity_proto.Post, 1, required=False)
 
-'''Only need post id'''
 class GetAllCommentsForPostRequest(messages.Message):
-    post = messages.MessageField(entity_proto.Post, 1, required=False)
+    post_id = messages.StringField(1, required=False)
     query_params = messages.MessageField(
         entity_proto.QueryParams, 2, required=False)
 
@@ -115,9 +97,10 @@ class GetAllCommentsForPostResponse(messages.Message):
         entity_proto.QueryMetadata, 3, required=False)
 
 class GetAllPopularPostsAtLocationRequest(messages.Message):
-    user = messages.MessageField(entity_proto.User, 1, required=False)
+    username = messages.StringField(1, required=False)
+    location = messages.MessageField(entity_proto.Location, 2, required=False)
     query_params = messages.MessageField(
-        entity_proto.QueryParams, 2, required=False)
+        entity_proto.QueryParams, 3, required=False)
 
 class GetAllPopularPostsAtLocationResponse(messages.Message):
     posts = messages.MessageField(entity_proto.Post, 1, repeated=True)
@@ -125,11 +108,29 @@ class GetAllPopularPostsAtLocationResponse(messages.Message):
     query_metadata = messages.MessageField(
         entity_proto.QueryMetadata, 3, required=False)
 
+class GetAllPostsAtLocationRequest(messages.Message):
+    location = messages.MessageField(entity_proto.Location, 1, required=False)
+    query_params = messages.MessageField(
+        entity_proto.QueryParams, 2, required=False)
+
+class GetAllPostsAtLocationResponse(messages.Message):
+    posts = messages.MessageField(entity_proto.Post, 1, repeated=True)
+    status = messages.MessageField(Status, 2, required=False)
+    query_metadata = messages.MessageField(
+        entity_proto.QueryMetadata, 3, required=False)
+
+class GetAllPostLocationsRequest(messages.Message):
+    pass
+
+class GetAllPostLocationsResponse(messages.Message):
+    locations = messages.MessageField(entity_proto.Location, 1, repeated=True)
+    status = messages.MessageField(Status, 2, required=False)
+
 class GetPopularLocationsRequest(messages.Message):
     pass
 
 class GetPopularLocationsResponse(messages.Message):
-    locations = messages.StringField(1, repeated=True)
+    locations = messages.MessageField(entity_proto.Location, 1, repeated=True)
     status = messages.MessageField(Status, 2, required=False)
 
 class CalculateAllPopularityIndexRequest(messages.Message):
